--- a/WindowsFormsApp1/CC01.Winform.csproj
+++ b/WindowsFormsApp1/CC01.Winform.csproj
@@ -97,5 +97,23 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CC01.BLL\CC01.BLL.csproj">
+      <Project>{f7a076bd-0074-4b75-b1bc-d698772dc5e8}</Project>
+      <Name>CC01.BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CC01.BO\CC01.BO.csproj">
+      <Project>{c641e0ba-88c4-47a5-a695-006ae6fab4f0}</Project>
+      <Name>CC01.BO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CC01.DAL\CC01.DAL.csproj">
+      <Project>{152078de-dba1-4c06-b811-0d820a6beae0}</Project>
+      <Name>CC01.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CC01\CC01.csproj">
+      <Project>{f6f739d4-c374-475d-a3d9-2d077f8834c6}</Project>
+      <Name>CC01</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
