--- a/CC01.BLL/CC01.BLL.csproj
+++ b/CC01.BLL/CC01.BLL.csproj
@@ -41,13 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Eleve.BLO.cs" />
+    <Compile Include="Common.cs" />
+    <Compile Include="EcoleBLO.cs" />
+    <Compile Include="EleveBLO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypingException.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CC01.BO\CC01.BO.csproj">
       <Project>{c641e0ba-88c4-47a5-a695-006ae6fab4f0}</Project>
       <Name>CC01.BO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CC01.DAL\CC01.DAL.csproj">
+      <Project>{6abfe9f6-ea2f-4b90-b7de-01783b0437c3}</Project>
+      <Name>CC01.DAL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
